--- a/server/package.json
+++ b/server/package.json
@@ -1,39 +1,18 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "engines": {
-    "node": "12.16.0"
-  },
-  "main": "index.js",
-  "license": "MIT",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "",
-    "start": "node server.js",
-    "build": "cd .. && cd client && npm run build",
-    "install-client": "cd .. && cd client && npm install",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm run install-client && npm run build",
-    "client": "cd .. && cd client && npm start",
-    "dev": "concurrently -n 'server,client' -c 'red,green' \"nodemon server.js\" \"npm run client\""
+    "start": "node ./bin/www",
+    "dev": "concurrently -n 'server,client' -c 'red,green' \"nodemon server.js\" \"npm run client\"",
+    "client": "cd .. && cd client && npm start"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "mongoose": "^5.9.20",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
-    "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.6"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
